<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyService</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
     <string name="title_activity_main">ServiceTest</string>
    <string name="start">start</string>
    <string name="bind">bind</string>
    <string name="unbind">unbind</string>
    <string name="stop">stop</string>
    <string name="Volumup">Volum Up</string>
    <string name="Volumdown">Volum Down</string>   

</resources>
